percentages update correctly, but the year update is one selection behind

--- a/src/components/BarChart/BarChart.css
+++ b/src/components/BarChart/BarChart.css
@@ -30,7 +30,7 @@ h3 {
     background-color: var(--darkgrn);
     color: white; 
     padding-top: 1vh;
-    padding-bottom: 3vh;
+    padding-bottom: 10vh;
     font-size: large;
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -46,7 +46,7 @@ h3 {
   
   .BarChart-Bar:hover {
     transition: .5s;
-    padding-bottom: 4.5vh;
+    padding-bottom: 11vh;
   }
 
 
